src/objects/VisitThisWeek__c.object
<CustomObject>
    <fields>
        <fullName>BeyondAnalysis__c</fullName>
        <label>超期分析</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer__c</fullName>
        <formula>opportunity__r.FinalCustomer__c</formula>
        <label>客户名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>日期</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>星期一</fullName>
                </value>
                <value>
                    <fullName>星期二</fullName>
                </value>
                <value>
                    <fullName>星期三</fullName>
                </value>
                <value>
                    <fullName>星期四</fullName>
                </value>
                <value>
                    <fullName>星期五</fullName>
                </value>
                <value>
                    <fullName>星期六</fullName>
                </value>
                <value>
                    <fullName>星期日</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FocusMatters__c</fullName>
        <label>本周重点推进事项</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadReview__c</fullName>
        <label>领导点评</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OmpetitiveProducts__c</fullName>
        <label>竞争对手/竞品分析</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PerformanceAnalysis__c</fullName>
        <label>业绩分析</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <label>人物</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>进度</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>备注</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <label>支持</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>项目名称</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>本周拜访</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>BZBF-{00000000}</displayFormat>
        <label>本周拜访编码</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>本周拜访</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>